# CleitonForge

./: .gitignore  Cargo.toml  README.md  README.pt-BR.md  cleitonforge-brief.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: run_suite.sh
benchmarks/circuits/: bv_4q.qasm  grover_2q.qasm  qaoa_maxcut_4q.qasm  qft_4q.qasm
bug-zoo/: README.md  qiskit-16594-single-qubit-003.json  qiskit-commutative-cancellation-001.json  qiskit-cp-small-angle-002.json  statevector-conjugated-N1-amplitude-001.json  statevector-quantrs2-N1-amplitude-001.json  statevector-quantrs2-N2-probability-001.json  statevector-rz-sign-bug-N2-probability-001.json
cforge-backends/: Cargo.toml
cforge-backends/examples/: blindness_report.rs
cforge-backends/src/: certify.rs  density_matrix.rs  lib.rs  mirror.rs  noise.rs  noisy_backend.rs  q1tsim_backend.rs  quantrs2_backend.rs  roqoqo_backend.rs  sample.rs  statevector.rs  trait_def.rs  xeb.rs
cforge-backends/tests/: conformance_suite.rs  equivalence.rs
cforge-cli/: Cargo.toml
cforge-cli/examples/: benchmark_suite.rs  compare_grover.rs  normalize_qaoa.rs  quantum_volume.rs
cforge-cli/src/: ibm_profile.rs  main.rs
cforge-core/: Cargo.toml
cforge-core/src/: gate.rs  ir.rs  lib.rs  metrics.rs
cforge-enterprise/: Cargo.toml
cforge-enterprise/src/: device_noise.rs  lib.rs  readout_mitigation.rs  zne.rs
cforge-fuzz/: Cargo.toml
cforge-fuzz/src/: generator.rs  lib.rs  main.rs  oracle.rs  shrinker.rs  triage.rs  zoo.rs
cforge-metrics/: Cargo.toml
cforge-metrics/src/: circuit_stats.rs  fidelity.rs  lib.rs  memory.rs  performance.rs
cforge-parser/: Cargo.toml
cforge-parser/src/: error.rs  lib.rs  normalizer.rs  qasm2.rs  qasm3.rs  translate.rs
cforge-py/: Cargo.toml  README.md  pyproject.toml
cforge-py/notebooks/: qgcs_phase_convention_demo.ipynb
cforge-py/src/: lib.rs
docs/: index.html
examples/: bell.qasm  ibm_noise_profile.json
examples/benchmarks/: bernstein_vazirani.qasm  ghz.qasm  grover_3q_101.qasm  qaoa_maxcut_2q.qasm  qft3.qasm
notebooks/: cleitonforge_vs_qiskit.ipynb  convention_demo.ipynb
paper/: blindness-hierarchy.tex  differential-fuzzing-evaluation.tex  main.tex
tools/: fuzz_cirq.py  fuzz_pennylane.py  fuzz_pennylane_transforms.py  fuzz_pytket.py  fuzz_qiskit.py  fuzz_qiskit_passes.py  fuzz_qiskit_wide.py  fuzz_tket_passes.py  generator.py  oracle_qcec.py  triage_known.py
