[workspace]
resolver = "2"
members = [
    "cforge-core",
    "cforge-parser",
    "cforge-backends",
    "cforge-metrics",
    "cforge-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cleitonaugusto/cleitonforge"
authors = ["Cleiton Augusto"]
