[workspace]
resolver = "2"
members = [
    "cforge-core",
    "cforge-parser",
    "cforge-backends",
    "cforge-metrics",
    "cforge-cli",
    "cforge-fuzz",
    "cforge-py",
    "cforge-enterprise",
]
# cforge-py requires Python headers; exclude from default cargo build/test
# cforge-enterprise is private/commercial — included in workspace for IDE support
default-members = [
    "cforge-core",
    "cforge-parser",
    "cforge-backends",
    "cforge-metrics",
    "cforge-cli",
    "cforge-fuzz",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cleitonaugusto/cleitonforge"
authors = ["Cleiton Augusto Correa Bezerra <augusto.cleiton@gmail.com>"]
