[package]
name = "cforge-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pluggable simulation backends for CleitonForge"

[dependencies]
cforge-core = { path = "../cforge-core" }
num-complex = "0.4.6"
quantrs2 = "0.2.0"
quantrs2-core = "0.2.0"

[dev-dependencies]
num-complex = "0.4.6"
