[package]
name = "cforge-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pluggable simulation backends for CleitonForge"

[dependencies]
cforge-core = { path = "../cforge-core" }
num-complex = "0.4.6"
quantrs2 = "0.2.0"
quantrs2-core = "0.2.0"
roqoqo = "1.22"
ndarray = "0.17"
qoqo_calculator = "~1.9"
rand = { version = "0.10", features = ["std_rng"] }
q1tsim = { version = "0.5", optional = true }

[features]
q1tsim = ["dep:q1tsim"]

[dev-dependencies]
num-complex = "0.4.6"
