[package]
name = "cforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for CleitonForge"

[[bin]]
name = "cforge"
path = "src/main.rs"

[dependencies]
cforge-core = { path = "../cforge-core" }
cforge-parser = { path = "../cforge-parser" }
cforge-backends = { path = "../cforge-backends", features = ["q1tsim"] }
cforge-metrics = { path = "../cforge-metrics" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde_json = "1"
rand = { version = "0.10", features = ["std_rng"] }
num-complex = "0.4"
