[package]
name = "cforge-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standardized metrics computation for CleitonForge"

[dependencies]
cforge-backends = { version = "0.1.0", path = "../cforge-backends" }
cforge-core = { path = "../cforge-core" }
num-complex = "0.4.6"
