[package]
name = "cforge-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multi-format quantum circuit parsing (OpenQASM 2/3) for CleitonForge"

[dependencies]
cforge-core = { path = "../cforge-core" }
oq3_parser = "0.7.0"
oq3_semantics = "0.7.0"
oq3_syntax = "0.7.0"
qasm = "1.0.0"
