[package]
name = "cforge-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for CleitonForge quantum simulator benchmarking"

[lib]
name = "cleitonforge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
cforge-core     = { path = "../cforge-core" }
cforge-backends = { path = "../cforge-backends" }
cforge-metrics  = { path = "../cforge-metrics" }
cforge-parser   = { path = "../cforge-parser" }
